fix threejs overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .App {
   text-align: center;
 }
@@ -36,7 +40,7 @@
 }
 
 .canvas {
-  max-width: 100%;
+  width: 100%;
 }
 
 .name{
